# SIstemas-Operativos

./: README.md
Proyecto1/Documentacion/: README.md
Proyecto1/Imagenes/high1/: Dockerfile
Proyecto1/Imagenes/high2/: Dockerfile
Proyecto1/Imagenes/low1/: Dockerfile
Proyecto1/Imagenes/low2/: Dockerfile  low2.py
Proyecto1/Script/: conteiners.sh
Proyecto1/module/: sysinfo.c
Proyecto1/src/: .gitignore
Proyecto1/src/Script/: prueba.sh
Proyecto1/src/Service/service/: Cargo.toml
Proyecto1/src/Service/service/src/: main.rs
Proyecto1/src/module/: sysinfo.c
Proyecto1/src/python_service/: docker-compose.yml  main.py  requirements.txt
Proyecto2/: .gitignore  Readme.md
Proyecto2/Disciplicas/Atletismo/: cs
Proyecto2/Disciplicas/Natacion/: go.mod
Proyecto2/Disciplicas/proto/: disciplinas.pb.go  disciplinas.proto  disciplinas_grpc.pb.go
Proyecto2/Facultades/agronomia/: agronomia.go  go.mod  main.go
Proyecto2/Facultades/grpc_client/: Cargo.toml  Dockerfile  build.rs
Proyecto2/Facultades/ingenieria/: Cargo.toml
Proyecto2/Locus/: locusfile.py
Proyecto2/Locus/env/: pyvenv.cfg
Proyecto2/kubernetes/: ingress.yaml  namespace.yaml
Tarea1/Tarea1/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  modules.order  sysinfo.c  sysinfo.ko  sysinfo.mod.c
Tarea1/prueba1/: .Module.symvers.cmd  .basic.ko.cmd  .basic.mod.cmd  .basic.mod.o.cmd  .basic.o.cmd  .modules.order.cmd  Makefile  basic.c  basic.ko  basic.mod  basic.mod.c
Tarea2/: README.md  continer.sh
Tarea3/: README.MD
(+38 files in other folders)
